--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    /* box-shadow: 10px 10px 10px ; */
   }
 }
 
@@ -23,4 +24,48 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.shadow-effect {
+  box-shadow: -5px 5px 0px black;
+}
+
+.shadow-effect-on:hover {
+  box-shadow: -5px 5px 0px black;
+}
+
+
+.multi-line-truncate {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  /* Change number to control lines */
+}
+
+
+.title-truncate {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  /* Change number to control lines */
+}
+
+/* this is use to remove outline from text editor */
+.ProseMirror:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
+
+
+.scrollbar-hidden {
+  scrollbar-width: none;
 }
