--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --breakpoint-mobile: 556px;
+  /* --breakpoint-sm: */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -68,4 +70,20 @@ body {
 
 .scrollbar-hidden {
   scrollbar-width: none;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    transform: translateX(0) !important;
+    inset-block: calc(var(--spacing) * 0) !important;
+  }
+
+  .inActive {
+    transform: translateX(-100%) !important;
+
+  }
 }
